Issues should be fixed now

--- a/Basic_HTML_Template.html
+++ b/Basic_HTML_Template.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Basic HTML Template</title>
+        <link rel="icon" type="image/png" href="Small_J.png">
         <link rel="stylesheet" href="./CSS/Basic_style.css">
+       
     </head>
     <body>
         <div>
